--- a/css/main.css
+++ b/css/main.css
@@ -257,13 +257,13 @@ ul, li {
     margin-left: 22px;
   }
 
-.swiper-pagination-bullet {
+.swiper-pagination-bullet !important {
     width: 30px;
     height: 4px;
     background: #D1D1D1;
 }
 
-.swiper-pagination-bullet-active {
+.swiper-pagination-bullet-active !important {
     background: #000;
 }	
 
